@@ -1,3 +1,12 @@
+Sun Jul 28 17:38:32 2013  Masaki Matsushita  <glass.saga@gmail.com>
+
+	* string.c: add internal API rb_str_locktmp_ensure().
+
+	* io.c (io_fread): use rb_str_locktmp_ensure().
+	  [ruby-core:56121] [Bug #8669]
+
+	* test/ruby/test_io.rb: add a test for above.
+
 Sun Jul 28 13:04:39 2013  Masaki Matsushita  <glass.saga@gmail.com>
 
 	* io.c (interpret_seek_whence): support SEEK_DATA and SEEK_HOLE.
